---
source: crates/fundle_macros_impl/tests/newtype_basic.rs
expression: expand_fundle_newtype!(item)
---
#[derive(::std::clone::Clone)]
#[allow(dead_code)]
struct Foo(String);
impl<__FundleFromT> ::std::convert::From<__FundleFromT> for Foo
where
    __FundleFromT: ::std::convert::AsRef<String>,
    String: ::std::clone::Clone,
{
    fn from(x: __FundleFromT) -> Self {
        Self(x.as_ref().clone())
    }
}
impl ::std::ops::Deref for Foo {
    type Target = String;
    fn deref(&self) -> &Self::Target {
        &self.0
    }
}
impl ::std::ops::DerefMut for Foo {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.0
    }
}
